fix text spacing on chrome

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -61,7 +61,7 @@ header {
   font-size: 2.5em;
   display: inline;
   position: relative;
-  top: 1.4%;
+  top: .25em;
 }
 
 .siteInfo {
